feat(web): add event-emitter function and update date-cell UI

--- a/web/src/pages/Calendar/index.module.scss
+++ b/web/src/pages/Calendar/index.module.scss
@@ -28,3 +28,18 @@
     background-color: white;
   }
 }
+
+.cellulStyle {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  .cellLiItem {
+    display: block;
+    width: 100%;
+    padding-left: 10px;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.2);
+    }
+  }
+}
