feat(web): add login and register logic

--- a/web/src/pages/Calendar/index.module.scss
+++ b/web/src/pages/Calendar/index.module.scss
@@ -1,5 +1,4 @@
 .root {
-  overflow: hidden;
   background-color: white;
 }
 
@@ -26,6 +25,7 @@
 
   .content {
     background-color: white;
+    overflow: auto;
   }
 }
 
