fix(web): 更改部分UI代码

--- a/web/src/pages/Calendar/index.module.scss
+++ b/web/src/pages/Calendar/index.module.scss
@@ -10,7 +10,8 @@
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   .logo {
-    width: 50px;
+    width: 40px;
+    height: 40px;
   }
 }
 
